2006-08-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* ly/performer-init.ly: instrument name fixup.

	* input/manual/chord-names-jazz.ly (banterProperties):
	instrumentName update

	* scm/define-event-classes.scm (lambda): use ly:is-listened-event-class

	* lily/ly-module.cc (ly_module_symbols): use ly_hash_table_keys

	* lily/translator.cc (LY_DEFINE): ly:is-listened-event-class: new
	function. Use hash tables to check membership.

	* lily/general-scheme.cc (LY_DEFINE): new function.

	* lily/piano-pedal-engraver.cc (struct Pedal_type_info): idem

	* lily/include/translator.hh (struct Acknowledge_information): add Protected_scm

	* ly/music-functions-init.ly: change name to BreathingEvent

	* input/regression/*.ly: apply it.

	* python/convertrules.py (conv): better instrumentName conversion
	rule.

	* scm/define-music-types.scm (music-descriptions): add
	line-break-event to LineBreakEvent music

	* lily/music.cc (to_event): don't crash if music type not set.

	* lily/spacing-loose-columns.cc (set_loose_columns): don't barf if
	spacing not set.


	* lily/spacing-engraver.cc (stop_translation_timestep): set
	spacing for proportional notation too.

	* scm/translation-functions.scm (format-bass-figure): inspect stream-event.

	* scripts/lilypond-book.py (bindir): add bindir to $PATH.

2006-08-08  Joe Neeman  <joeneeman@gmail.com>

	* lily/include/constrained-breaking.hh: add Line_details (Prob*)

	* scm/page.scm (make-page): make it friendlier to call (esp. from C++)

	* scm/layout-page-layout.scm (make-page-from-systems): new function
	(optimal-page-breaks): use the new page-breaking calling convention

	* scm/define-context-properties.scm (all-user-translation-properties):
	add revokePageTurns

	* lily/paper-column-engraver.cc (stop_translation_timestep): add
	revokePageTurns  functionality. If there is a special barline within
	the breakable region, break there instead of at the end of the region.
