@@ -64,6 +64,7 @@ Lee T. Wilkirson
 Mark Dewey
 Markus Schneider
 Michael Meixner
+Michael Welsh Duggan
 Orm Finnendahl
 Paul Scott
 Quentin Spencer
